...
    <string name="PENNY">PENNY</string>
    <string name="transfer">Transfer</string>
    <string name="GOLD">GOLD</string>
    <string name="wallet">Wallet</string>
    <string name="bank">Bank</string>
    <string name="friends">Friends</string>
    <string name="log_out">Log out</string>
    <string name="reward">Reward</string>
    <string name="requests">Requests</string>
    <string name="add">Add</string>
    <string name="e_mail">E-mail</string>
    <string name="log_in">Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="normal">Normal</string>
    <string name="treasure_hunt">Treasure Hunt</string>
    <string name="select_game_mode">Select Game Mode</string>
    <string name="treasure_hunt_explain">In Treasure Hunt mode coins you collect will have extra value, but you can only see nearby coins on the map</string>
    <string name="loading">Loading......</string>
    <string name="distance">Distance</string>
    <string name="collect">collect</string>
...
