...
        mapbox:layout_constraintHorizontal_bias="0.971"
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:layout_constraintVertical_bias="1.0"/>

    <Button
        android:id="@+id/activity_map_btn_log_out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
...
        mapbox:layout_constraintStart_toStartOf="parent"
        mapbox:layout_constraintTop_toTopOf="parent"
        mapbox:layout_constraintHorizontal_bias="0.971"
        mapbox:layout_constraintVertical_bias="1.0"/>

    <TextView
        android:id="@+id/activity_map_txt_game_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        mapbox:layout_constraintEnd_toEndOf="parent"
...
